# algo4j

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  README_Zh.md  appveyor.yml  build.gradle  circle.yml  gradlew  gradlew.bat  proj_config  settings.gradle
code_drafts/: ArraySeq.cpp  ArraySeq.h  ArraySeq.java  ArraySeqTest.kt  FrontStarGraphDebug.cpp  FrontStarGraphNew.cpp  FrontStarGraphOld.cpp  Min-Heap-ori.cpp  Min-Heap.cpp  ReversePairSum.java  Seq.java  bigint.c  bigint2.c  bigint3.cpp  bigint_willot.cpp  bitint2.c  dijkstra_temp.cpp  int_divide.cpp  int_minus.cpp  int_plus.cpp  int_times.cpp  matrix_fib.cpp  org_ice1000_bit_ReversePairSum.cpp  org_ice1000_bit_ReversePairSum.h  org_ice1000_math_Matrix.cpp  org_ice1000_math_Matrix.h  org_ice1000_seg_SegmentTree.cpp  org_ice1000_seg_SegmentTree.h
demos/src/: 极乐净土.java
extension/org/algo4j/: AdjacentMatrix.kt  BigInt.kt  BinaryIndexedTree.kt  FrontStarGraph.kt  SeqUtils.kt  UnionSet.kt
jni/: .gitignore  Build.win  CMakeLists.txt  Makefile.win  README.md  build.bat  clean.bat  clean.cmd  cm-build.bat  compile.bat  jni.dev  jni32.dev  jni_private.h  jni_private.rc  org_ice1000_bit_BinaryIndexedTree.cpp  org_ice1000_bit_BinaryIndexedTree.h  org_ice1000_bit_ReversePairSum.cpp  org_ice1000_bit_ReversePairSum.h  org_ice1000_graph_FrontStarGraph.cpp  org_ice1000_graph_FrontStarGraph.h  org_ice1000_graph_UnionSet.cpp  org_ice1000_graph_UnionSet.h  org_ice1000_math_MathUtils.h  org_ice1000_math_Trigonometric.cpp  org_ice1000_math_Trigonometric.h  org_ice1000_public_functions.cpp  org_ice1000_public_functions.h  org_ice1000_public_templates.hpp  org_ice1000_util_ArrayUtils.cpp  org_ice1000_util_ArrayUtils.h  org_ice1000_util_Math.cpp  org_ice1000_util_Math.h  org_ice1000_util_SequenceUtils.cpp  org_ice1000_util_SequenceUtils.h
jni/bit/: BinaryIndexedTree.cpp  BinaryIndexedTree.h  org_ice1000_bit_BinaryIndexedTree.cpp  org_ice1000_bit_BinaryIndexedTree.h
jni/cpp-test/: beep.cpp  beep2.cpp  bubble_sort_test.cpp  clean.bat  compile.bat  discretization.cpp  heap_test.cpp  heap_test2.cpp  heap_test3.cpp  insertion_sort_test.cpp  int_cmp.cpp  int_div_inside.cpp  int_div_outside.cpp  int_minus.cpp  int_rem_inside.cpp  int_test.cpp  int_times.cpp  int_times_inside.cpp  inversion_test.cpp  kmp_test.cpp  matrix_fib_test.cpp  memory.cpp  merge_sort_test.cpp  message_box.cpp  pair_test.cpp  prime.cpp  quick_sort_test.cpp  trie_test.cpp
jni/global/: basics.hpp  bigint.cpp  bigint.h  complex.cpp  complex.h  functions.cpp  functions.h  heap.hpp  matrix.cpp  matrix.h  segtree.h  sort.hpp  templates.hpp  trie.cpp  trie.h  winapi.cpp  winapi.h
jni/graph/: AdjacentMatrix.cpp  AdjacentMatrix.h  AdjacentMatrixGraph.cpp  AdjacentMatrixGraph.h  FrontStarGraph.cpp  FrontStarGraph.h  Heap.cpp  Heap.h  UnionSet.cpp  UnionSet.h  org_ice1000_graph_UnionSet.h
jni/linear/: Heap.cpp  Heap.h
jni/math/: BigInt.cpp  BigInt.h  MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  Trigonometric.cpp  Trigonometric.h  Vector.cpp  Vector.h  org_ice1000_math_MathUtils.cpp  org_ice1000_math_MathUtils.h
jni/tree/: Segtree.cpp  Segtree.h  Trie.cpp  Trie.h  UnionSet.cpp  UnionSet.h
jni/tree/bit/: BinaryIndexedTree.cpp  BinaryIndexedTree.h
jni/tree/heap/: Heap.cpp  Heap.h  MaxHeap.cpp  MaxHeap.h  MinHeap.cpp  MinHeap.h
jni/util/: MemoryHelper.cpp  MemoryHelper.h  SeqUtils.cpp  SeqUtils.h  SequenceUtils.cpp  SequenceUtils.h  Statistics.cpp  Statistics.h  org_ice1000_util_SequenceUtils.cpp  org_ice1000_util_SequenceUtils.h
jni/win/: WinAPI.cpp  WinAPI.h
src/org/algo4j/bit/: BinaryIndexedTree.java  IntervalUpdateIntervalQuery.java  IntervalUpdatePointQuery.java  package-info.java
src/org/algo4j/error/: BinaryIndexedTreeException.java  DividedByZeroException.java  FrontStarGraphException.java  GraphException.java  QueueException.java  StackException.java  UnionSetException.java  package-info.java
(+189 files in other folders)
